Make sure inline code block are not split on word wrap in alerts

--- a/assets/scss/components/_alerts.scss
+++ b/assets/scss/components/_alerts.scss
@@ -101,6 +101,10 @@ body.dark .alert-warning {
   margin: 25px 0;
 }
 
+.alert code {
+  white-space: nowrap;
+}
+
 .alert a,
 body.dark .alert a {
   font-weight: 700;
